; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/extr_main.c_pyb_source_dir.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/extr_main.c_pyb_source_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pyb_config_source_dir = common dso_local global i32 0, align 4
@mp_const_none = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pyb_source_dir(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @mp_obj_is_str(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* @pyb_config_source_dir, align 4
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i32, i32* @mp_const_none, align 4
  ret i32 %9
}

declare dso_local i64 @mp_obj_is_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
